# rusty_shoe

./: README.md  borrowing.rs  slice.rs  stack.rs
day0/src/: main.rs
day0_input/: Cargo.toml
day0_input/src/: main.rs
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day10_formula/: Cargo.toml
day10_formula/src/: csvjson.json  main.rs
day11/src/: main.rs
day1_constants/: Cargo.toml
day1_constants/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day2_guess/: Cargo.toml
day2_guess/src/: main.rs
day3/src/: main.rs
day3_beer_song/: Cargo.toml
day3_beer_song/src/: main.rs
day4/src/: main.rs
day4_naughty_list/: Cargo.toml
day4_naughty_list/src/: main.rs
day5/src/: main.rs
day5_resolutions/: Cargo.toml
day5_resolutions/src/: main.rs
day6/src/: main.rs
day6_inventory/: Cargo.toml
day6_inventory/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day7_f1registry/: Cargo.toml
day7_f1registry/src/: main.rs
day8/src/: main.rs
day8_shikanisha/: Cargo.toml
day8_shikanisha/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
day9_masalamu/: Cargo.toml
day9_masalamu/src/: main.rs
guessing_color/: Cargo.toml
guessing_color/src/: .main.rs.swp  main.rs  main.rs.save
project-Twosum/: Cargo.toml
project-Twosum/src/: main.rs
project_webapp_nickel/: Cargo.toml
rusty_aws/: Cargo.toml
rusty_aws/src/: main.rs
